src/test/ui/did_you_mean/issue-48492-tuple-destructure-missing-parens.stderr
error: unexpected `,` in pattern
  --> $DIR/issue-48492-tuple-destructure-missing-parens.rs:51:17
   |
51 |     while let b1, b2, b3 = three_slice_to_tuple(reading_frame.next()
   |               --^------- help: try adding parentheses: `(b1, b2, b3)`

error: unexpected `,` in pattern
  --> $DIR/issue-48492-tuple-destructure-missing-parens.rs:62:14
   |
62 |     if let b1, b2, b3 = three_slice_to_tuple(reading_frame.next().unwrap()) {
   |            --^------- help: try adding parentheses: `(b1, b2, b3)`

error: unexpected `,` in pattern
  --> $DIR/issue-48492-tuple-destructure-missing-parens.rs:65:32
   |
65 |             Nucleotide::Adenine, Nucleotide::Cytosine, _ => {
   |             -------------------^------------------------ help: try adding parentheses: `(Nucleotide::Adenine, Nucleotide::Cytosine, _)`

error: unexpected `,` in pattern
  --> $DIR/issue-48492-tuple-destructure-missing-parens.rs:77:10
   |
77 |     for x, _barr_body in women.iter().map(|woman| woman.allosomes.clone()) {
   |         -^----------- help: try adding parentheses: `(x, _barr_body)`

error: unexpected `,` in pattern
  --> $DIR/issue-48492-tuple-destructure-missing-parens.rs:81:10
   |
81 |     for x, y @ Allosome::Y(_) in men.iter().map(|man| man.allosomes.clone()) {
   |         -^------------------- help: try adding parentheses: `(x, y @ Allosome::Y(_))`

error: unexpected `,` in pattern
  --> $DIR/issue-48492-tuple-destructure-missing-parens.rs:89:14
   |
89 |     let women, men: (Vec<Genome>, Vec<Genome>) = genomes.iter().cloned()
   |         -----^---- help: try adding parentheses: `(women, men)`

error: aborting due to 6 previous errors

